2005-12-28  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Eric, landed by ap.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6214
          text-indent in RTL block does the opposite

        * fast/block/basic/text-indent-rtl-expected.checksum: Added.
        * fast/block/basic/text-indent-rtl-expected.png: Added.
        * fast/block/basic/text-indent-rtl-expected.txt: Added.
        * fast/block/basic/text-indent-rtl.html: Added.

2005-12-28  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Darin, landed by ap.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5812
          Generate load events for <script> elements

        * fast/dom/HTMLScriptElement/resources/script-load.js: Added.
        * fast/dom/HTMLScriptElement/script-load-events-expected.txt: Added.
        * fast/dom/HTMLScriptElement/script-load-events.html: Added.

2005-12-28  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Maciej.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6246
          TextIterator::rangeFromLocationAndLength() returns nil range for an 
          empty document

        * editing/input/range-for-empty-document-expected.txt: Added.
        * editing/input/range-for-empty-document.html: Added.

2005-12-27  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Eric.

	- proper length for Array concat function is 1, not 0; also add test
	for String concat.
	
        * fast/js/kde/function_length-expected.txt:
        * fast/js/kde/resources/function_length.js:

2005-12-27  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        - Update tests for http://bugzilla.opendarwin.org/show_bug.cgi?id=6250
        Implement Array.map and Array.filter
        
        * fast/js/array-every-expected.txt:
        * fast/js/array-every.html:
        * fast/js/array-foreach-expected.txt:
        * fast/js/array-foreach.html: